--- a/NexGen_power_analysis.ipynb
+++ b/NexGen_power_analysis.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.04639387669523733\n"
+      "expected effect size is 0.04639387669523733\n"
      ]
     }
    ],
@@ -19,7 +19,7 @@
     "visual_claustrum = 0.07299358\n",
     "auditory_cortex = 0.37967292\n",
     "auditory_claustrum = auditory_cortex*visual_claustrum/visual_cortex\n",
-    "print(auditory_claustrum)"
+    "print(\"expected effect size is\", auditory_claustrum)"
    ]
   },
   {
@@ -58,8 +58,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7294.112718977036\n",
-      "2947.19494864258\n"
+      "N samples for auditory activity:  7294\n",
+      "N samples for visual activity:  2947\n"
      ]
     },
     {
@@ -79,8 +79,8 @@
     "ratio=1 # ratio is 1, if we want to compare auditory vs. baseline and visual vs. baseline\n",
     "n_samples_A = tt_ind_solve_power(effect_size=auditory_claustrum, alpha=0.05, power=0.8, ratio=ratio, alternative='two-sided')\n",
     "n_samples_V = tt_ind_solve_power(effect_size=visual_claustrum, alpha=0.05, power=0.8, ratio=ratio, alternative='two-sided')\n",
-    "print(n_samples_A)\n",
-    "print(n_samples_V)"
+    "print(\"N samples for auditory activity: \", round(n_samples_A))\n",
+    "print(\"N samples for visual activity: \", round(n_samples_V))"
    ]
   },
   {
@@ -92,8 +92,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12.156854531628394\n",
-      "4.911991581070967\n"
+      "scanning hours for visual activity:  12.16\n",
+      "scanning hours for auditory activity:  4.91\n"
      ]
     }
    ],
@@ -103,8 +103,8 @@
     "TR = 2 # assumed TR in seconds\n",
     "scanning_time_hours_A = (n_samples_A*3)*TR/60/60\n",
     "scanning_time_hours_V = (n_samples_V*3)*TR/60/60\n",
-    "print(scanning_time_hours_A)\n",
-    "print(scanning_time_hours_V)"
+    "print(\"scanning hours for visual activity: \", round(scanning_time_hours_A,2))\n",
+    "print(\"scanning hours for auditory activity: \", round(scanning_time_hours_V,2))"
    ]
   }
  ],
